update source code unique

--- a/app/code/Casio/Shop/view/adminhtml/layout/casio_shop_shop_edit.xml
+++ b/app/code/Casio/Shop/view/adminhtml/layout/casio_shop_shop_edit.xml
@@ -3,7 +3,7 @@
 	<update handle="styles"/>
 	<body>
 		<referenceContainer name="content">
-			<uiComponent name="casio_shop_shop_form"/>
+			<uiComponent name="casio_shop_form"/>
 		</referenceContainer>
 	</body>
 </page>
